--- a/style.css
+++ b/style.css
@@ -89,11 +89,7 @@ body {
         background-size: contain;
     }
 
-    #team-content {
-        margin-left: 3vh;
-    }
-
-    #team-tabs {
-        margin-left: 3rem !important;
+    #team {
+        min-height: 760px;
     }
 }
